--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<li>Weightlifting</li>
 		</ol>
 		<br><br>
-			<img src="../desktop/website/nico1.jpg" width="600" height="600">
+			<img src="nico1.jpg" width="600" height="600">
 		</center>
 		<nav>
   		<ul>
