--- a/projectpage2.html
+++ b/projectpage2.html
@@ -26,7 +26,7 @@
 			<li>Student Government</li>
 		</ol>
 		<br><br>
-			<img src="../desktop/website/autumn1.jpg" width="600" height="600">
+			<img src="autumn1.jpg" width="600" height="600">
 		</center>
 		<nav>
   		<ul>
