changed file location

--- a/projectpage3.html
+++ b/projectpage3.html
@@ -26,7 +26,7 @@
 			<li>Student Government</li>
 		</ol>
 		<br><br>
-			<img src="../desktop/website/bailey1.jpg" width="600" height="600">
+			<img src="bailey1.jpg" width="600" height="600">
 		</center>
 		<nav>
   		<ul>
