--- a/projectpage4.html
+++ b/projectpage4.html
@@ -26,7 +26,7 @@
 			<li>Playing With Make-up</li>
 		</ol>
 		<br><br>
-			<img src="../desktop/website/summer1.jpg" width="600" height="600">
+			<img src="summer1.jpg" width="600" height="600">
 		</center>
 		<nav>
   		<ul>
