--- a/projectpage5.html
+++ b/projectpage5.html
@@ -27,7 +27,7 @@
 			<li>Cheeseburgerking</li>
 		</ol>
 		<br><br>
-			<img src="../desktop/website/mason1.jpg" width="600" height="600">
+			<img src="mason1.jpg" width="600" height="600">
 		</center>
 		<nav>
  		<ul>
