--- a/projectpage5.html
+++ b/projectpage5.html
@@ -12,7 +12,11 @@
 	<body>
 		<center>
 			<h1 class="mainTitle">My Kids</h1>
+		</center>
 			<hr>
+			<img src="https://68.media.tumblr.com/9c3a781ed397e6b36801e811f37ab4d1/tumblr_nnc362Y7iK1rwq85xo1_400.gif" style="position: top-left" width="100" height="100">
+			<img src="https://media.giphy.com/media/6GfyBJHx5qmJy/giphy.gif" style="position:top-right">
+		<center>
 			<h2 class="name" style="color:blue">Mason</h2>
 		<p>Lastly, but definitely not least, is my youngest, Mason. I don't even know where to begin<br>
 		with this kid. Just when I thought I knew about parenting, he comes along. To say he gives me<br>
