--- a/projectpage3.html
+++ b/projectpage3.html
@@ -9,10 +9,13 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
-	<body>
+	<body style="background-image:url(http://bgfons.com/uploads/light/light_texture2284.jpg);">
 		<center>
 			<h1 class="mainTitle">My Kids</h1>
 			<hr>
+			<img src="http://38.media.tumblr.com/57769918e0d5ed6e9b16445c45d3841f/tumblr_moozcksZYz1sq9yswo1_500.gif" align="left" width="100" height="100" style="border-radius:20%;">
+			<img src="http://68.media.tumblr.com/03b4a287fc23b9d147a80248deb0a3d6/tumblr_inline_nt0o1nGgnR1qd1zc9_500.gif" align="right" width="100" height="100"
+			style="border-radius:20%">
 			<h2 class="name" style="color:rgb(70, 8, 117);">Bailey</h2>
 		<p>My Bailey is the middle child. She was born on March 19,2007. By far she is the most athletic<br>
 		of my kids. When it comes to running, nobody can catch her. Currently, she is in the 5th grade.<br>
@@ -26,7 +29,7 @@
 			<li>Student Government</li>
 		</ol>
 		<br><br>
-			<img src="bailey1.jpg" width="600" height="600">
+			<img class="slideIn" src="bailey3.jpeg" width="400" height="400">
 		</center>
 		<nav>
   		<ul>
