--- a/projectpage5.html
+++ b/projectpage5.html
@@ -9,13 +9,14 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
-	<body>
+	<body style="background-image:url(http://wallpaper-gallery.net/images/superman-movie-wallpapers/superman-movie-wallpapers-2.jpg);">
 		<center>
 			<h1 class="mainTitle">My Kids</h1>
 		</center>
 			<hr>
-			<img src="https://68.media.tumblr.com/9c3a781ed397e6b36801e811f37ab4d1/tumblr_nnc362Y7iK1rwq85xo1_400.gif" style="position: top-left" width="100" height="100">
-			<img src="https://media.giphy.com/media/6GfyBJHx5qmJy/giphy.gif" style="position:top-right">
+			<img src="https://68.media.tumblr.com/9c3a781ed397e6b36801e811f37ab4d1/tumblr_nnc362Y7iK1rwq85xo1_400.gif" align="left"  width="100" height="100" style="border-radius:20%">
+			<img src="https://media.giphy.com/media/3ov9hFds00b2o/giphy.gif" align="right" width="100" height="100"
+			style="border-radius:20%">
 		<center>
 			<h2 class="name" style="color:blue">Mason</h2>
 		<p>Lastly, but definitely not least, is my youngest, Mason. I don't even know where to begin<br>
@@ -31,7 +32,7 @@
 			<li>Cheeseburgerking</li>
 		</ol>
 		<br><br>
-			<img src="mason1.jpg" width="600" height="600">
+			<img class="slideIn" src="mason1.jpg" width="600" height="600">
 		</center>
 		<nav>
  		<ul>
