--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
-	<body> 
-		<center>
+	<body style="background-image:url(http://d241yswl6yg9sc.cloudfront.net/linen-texture2/top-new.jpg);">
+		 <center>
 			<h1 class="mainTitle">My Kids</h1>
 			<hr>
+			<img src="http://images00.imikimi.com/image/rB7p-15k-1.gif?height=400&scale=max&width=400" align="left" width="100" 
+			height="100" style="border-radius:20%;">
+			<img src="https://media.giphy.com/media/Cc8ehRI44ifgQ/giphy.gif" align="right" width="100" height="100"
+			style="border-radius:20%">
 			<h2 class="name" style="color:rgb(114, 4, 4);text-shadow:2px 2px 2px white;">Nico</h2>
 		<p>My son Nico is my oldest. He was born on August 8,2003. We both share the same birthday.<br>
 		He is currently in the 8th grade at Walden III middle school. I am very proud of him because,<br> 
@@ -26,7 +30,7 @@
 			<li>Weightlifting</li>
 		</ol>
 		<br><br>
-			<img src="nico1.jpg" width="600" height="600">
+			<img class="slideIn" src="nico1.jpg" width="400" height="400">
 		</center>
 		<nav>
   		<ul>
